spade-tests/src/snapshots/spade_tests__parser__range_separator_wrong_separator.snap
---
source: spade-tests/src/parser.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Expected range separator (`..` or `..=`)
  ┌─ testinput:2:22
  │
2 │     let a: int<fits(0.=1)> = 0
  │                      ^ Expected range separator here


