spade-tests/src/snapshots/spade_tests__parser__wrong_enum_variant_items_opener_but_very_wrong.snap
---
source: spade-tests/src/parser.rs
---
enum foo {
    B|bool|,
}


error: Unexpected `|`, expected `{`, `,` or `}`
  ┌─ testinput:2:6
  │
2 │     B|bool|,
  │      ^
